--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,14 +16,20 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        php: [8.3, 8.2, 8.1]
-        laravel: [10.*]
+        os: [ubuntu-latest]
+        php: [8.3]
+        laravel: [10.*, 11.*, 12.*]
         stability: [prefer-stable]
         include:
           - laravel: 10.*
             testbench: 8.*
             carbon: ^2.67
+          - laravel: 11.*
+            testbench: 9.*
+            carbon: ^2.67
+          - laravel: 12.*
+            testbench: 10.*
+            carbon: ^3.00
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
